fixed double scrollbar in ie and firefox

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,6 +26,10 @@ body {
     flex-direction: column;
 }
 
+.rental__main {
+    overflow: hidden;
+}
+
 .rental__toolbar {
     z-index: 2;
 }
